  * Cloning to the the same branch works (providing a good way of
    reverting changes)
  * Cloning now updates buildRequirements and loadedTroves in troveInfo
    and enforces their consistency on the target branch
  * Cloning groups is now supported
  * Fix update case where a group update should cause conary to search the 
    system for an older version of a trove to replace.

Changes in 0.62.14:
  * The threading changes in .13 caused some error information to be lost.
    Tracebacks have now been fixed, and the download thread checks much more
    often to see if it needs to exit.
  * Catch InstallBucketConflicts exception

Changes in 0.62.13:
  o Repository Server changes
    * The Schema creation SQL statements have been rewritten in a more
      standardized form. Some indexes have been redefined and a number
      of views have made their way into the default repository schema.
    * The new call troveNamesOnServer can be used now by the netclient
      code for a much faster retrieval of all trove names available on
      all labels on a given server. Server and client protocol numbers
      have changed.
    * The getTroveList() server side function got a rework that should
      result in about a 50% execution time speedup on most queries.
    * The Metadata SQL query has been reworked to join tables in a
      much better order, speeding up the getMetadata call on a
      repository with many versions much faster.

  o Client changes
    * Conary now compresses XML-RPC requests before sending them to
      the repository server.  In order to use compression, the remote
      server must be running Conary 0.62.13 or later.  If the server
      is running an older version, the client will fall back to
      sending uncompressed requests.
    * The database conversion in 0.62.12 did not correct all
      out-of-order file streams.  A new conversion function is in
      0.62.13 that will examine every file stream and ensure that it